[package]
name = "rust-leb128"
version = "0.1.0"
edition = "2021"
description = """
  LEB-128 (varint) encoding.
"""
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/leb128"
keywords = [ "leb128", "varint", "encoding", "vlq" ]
categories = [ "no-std", "no-std::no-alloc" ]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[features]
default = []

# Enable `alloc`.
alloc = []

# Enable `std`.
std = ["alloc"]

[dev-dependencies]
rust-leb128 = { path = ".", features = ["std"] }
rand = { version = "0.8.5" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
